--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -1,14 +1,22 @@
 cmake_minimum_required(VERSION 3.10)
 
 # set the project name
-project(Exponent VERSION 1.0)
+project(Tutorial VERSION 1.0)
+option(USE_MYMATH "Use tutorial provided math implementation" ON)
+configure_file(TutorialConfig.h.in src/TutorialConfig.h)
 
-configure_file(src/ExponentConfig.h.in src/ExponentConfig.h)
+if(USE_MYMATH)
+  add_subdirectory(include)
+  list(APPEND EXTRA_LIBS include)
+  list(APPEND EXTRA_INCLUDES "${PROJECT_SOURCE_DIR}/include")
+endif()
 
-# target_include_directories(. PUBLIC "${PROJECT_BINARY_DIR}")
+
 # specify the C standard in project build
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_STANDARD_REQUIRED True)
 
 # add the executable
-add_executable(exp src/exp.c)
+add_executable(Tutorial src/tutorial.c)
+target_link_libraries(Tutorial PUBLIC ${EXTRA_LIBS})
+target_include_directories(Tutorial PUBLIC "${PROJECT_BINARY_DIR}" "${PROJECT_BINARY_DIR}/src" ${EXTRA_INCLUDES})
